--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
     <div class="background-image" style="background-image: url(assets/img/main.jpg);"></div>
     <div class="hero-content-area">
       <h1>Digital Media Agency</h1>
-      <h3>Solutions to increase your profits.!!!</h3>
+      <h3>Solutions to increase your
+        <span class="typer" id="main" data-words="sales,social presense,lightweight,easy" data-colors="white" data-delay="100" data-deleteDelay="1000"></span>
+        <span class="cursor" data-owner="main"></span>
+      </h3>
+
       <a href="#" class="btn">Contact Us Now</a>
     </div>
   </section>
@@ -103,6 +107,6 @@
       <li><a href="#"><i class="fa fa-snapchat-square fa-2x"></i></a></li>
     </ul>
   </footer>
-
+  <script src="../assets/js/typer.js"></script>
 </body>
 </html>
