Changes to be committed: modified:   index.html
assets/img/logo.png

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <header>
-    <h2><a href="#">4Kreative</a></h2>
+    <img src="assets\img\logo.png" alt="4KREATIVE" width="220px" height="80px"></div>
     <nav>
       <li><a href="#">Services</a></li>
       <li><a href="#">Projects</a></li>
