--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <section class="hero">
     <div class="background-image" style="background-image: url(assets/img/main.jpg);"></div>
     <div class="hero-content-area">
-      <h1>Digital Media Agency</h1>
+      <h1 class="reveal"><span>Digital Media Agency</span></h1>
       <h3>Solutions to increase your
         <span class="typer" id="main" data-words="sales,social presense,lightweight,easy" data-colors="white" data-delay="100" data-deleteDelay="1000"></span>
         <span class="cursor" data-owner="main"></span>
