--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="hero-content-area">
       <h1 class="reveal"><span>Your Ideas</span></h1>
       <h1 class="reveal" id="revTwo"><span>Brought To Life</span></h1>
-      <h3>Solutions to increase your
+      <h3 class="typing"><span>Solutions to increase your</span>
         <span class="typer" id="main" data-words="sales,social presense,lightweight,easy" data-colors="white" data-delay="100" data-deleteDelay="1000"></span>
         <span class="cursor" data-owner="main"></span>
       </h3>
@@ -108,6 +108,6 @@
       <li><a href="#"><i class="fa fa-snapchat-square fa-2x"></i></a></li>
     </ul>
   </footer>
-  <script src="../assets/js/typer.js"></script>
+  <script src="assets/js/typer.js"></script>
 </body>
 </html>
