--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>4Kreative</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <link rel="stylesheet" href="assets/css/styles.css">
@@ -13,7 +11,7 @@
 <body>
 
   <header>
-    <h2><a href="#">4Kreative</a></h2>
+    <img src="assets\img\logo.png" alt="4KREATIVE" width="220px" height="80px"></div>
     <nav>
       <li><a href="#">Services</a></li>
       <li><a href="#">Projects</a></li>
@@ -23,15 +21,16 @@
   </header>
 
   <section class="hero">
-    <div class="background-image" style="background-image: url(assets/img/main.jpg);"></div>
+    <div class="background-image"></div>
     <div class="hero-content-area">
-      <h1>Digital Media Agency</h1>
-      <h3>Solutions to increase your
-        <span class="typer" id="main" data-words="sales,social presense,lightweight,easy" data-colors="white" data-delay="100" data-deleteDelay="1000"></span>
+      <h1 class="reveal"><span>Your Ideas</span></h1>
+      <h1 class="reveal" id="revTwo"><span>Brought to Life</span></h1>
+      <div class="typing">
+        <span class="typer" id="main" data-words="Websites That Drive Businness, Powerful SEO Marketing, Dedicated to Your Success" data-colors="#333" data-delay="92" data-deleteDelay="3000"></span>
         <span class="cursor" data-owner="main"></span>
+      </div>
       </h3>
 
-      <a href="#" class="btn">Contact Us Now</a>
     </div>
   </section>
 
@@ -107,6 +106,6 @@
       <li><a href="#"><i class="fa fa-snapchat-square fa-2x"></i></a></li>
     </ul>
   </footer>
-  <script src="../assets/js/typer.js"></script>
+  <script src="assets/js/typer.js"></script>
 </body>
 </html>
