--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </section>
 
   <section class="destinations">
-    <h3 class="title">Some of our Kreations:</h3>
+    <h3 class="title">Some of our Creations:</h3>
     <p>Tired of sub-par solutions? At 4Kreative we strive on creating the best services for our customers. Here are our most recent projects.</p>
     <hr>
 
