--- a/index.html
+++ b/index.html
@@ -10,17 +10,23 @@
 </head>
 <body>
 
-  <header>
-    <img src="assets\img\logo.png" alt="4KREATIVE" width="220px" height="80px"></div>
-    <nav>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Projects</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
-    </nav>
+    <header class="header-home">
+      <div class="header-logo">
+      <a class="logo" href="index.html">
+    <img src="assets\img\logo4k.png" alt="4KREATIVE">
+  </a>
+  </div>
+</div>
+<div class="menu-icon header__item">
+    <span class="menu-icon__line">
+      
+    </span>
+ 
+  </div>
   </header>
 
   <section class="hero">
+    <p class="welcome">Welcome</p>
     <div class="background-image"></div>
     <div class="hero-content-area">
       <h1 class="reveal"><span>Your Ideas</span></h1>
