--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,31 +9,37 @@
 
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
+
 <body>
 
-    <header class="header-home">
-      <div class="header-logo">
+  <header class="header-home">
+    <div class="header-logo">
       <a class="logo" href="index.html">
-    <img src="assets\img\logo4k.png" alt="4KREATIVE">
-  </a>
-  </div>
-</div>
-<div class="menu-icon header__item">
-    <span class="menu-icon__line">
-      
-    </span>
- 
-  </div>
+        <img src="assets\img\logo4k.png" alt="4KREATIVE">
+      </a>
+    </div>
+    </div>
+    <div class="menu-icon header__item">
+      <span class="menu-icon__line">
+
+      </span>
+
+    </div>
   </header>
 
   <section class="hero">
-    <p class="welcome">Welcome</p>
+    <div class="side__bar">
+      <svg class="line" height="6" width="40">
+        <line style="stroke:#9ea0a6;stroke-width:2" x1="0" x2="30" y1="0" y2="0"></line>
+      </svg> Welcome
+    </div>
     <div class="background-image"></div>
     <div class="hero-content-area">
       <h1 class="reveal"><span>Your Ideas</span></h1>
       <h1 class="reveal" id="revTwo"><span>Brought to Life</span></h1>
       <div class="typing">
-        <span class="typer" id="main" data-words="Websites That Drive Businness, Powerful SEO Marketing, Dedicated to Your Success" data-colors="#333" data-delay="92" data-deleteDelay="3000"></span>
+        <span class="typer" id="main" data-words="Websites That Drive Businness, Powerful SEO Marketing, Dedicated to Your Success"
+          data-colors="#333" data-delay="92" data-deleteDelay="3000"></span>
         <span class="cursor" data-owner="main"></span>
       </div>
       </h3>
@@ -42,7 +49,8 @@
 
   <section class="destinations">
     <h3 class="title">Some of our Creations:</h3>
-    <p>Tired of sub-par solutions? At 4Kreative we strive on creating the best services for our customers. Here are our most recent projects.</p>
+    <p>Tired of sub-par solutions? At 4Kreative we strive on creating the best services for our customers. Here are our
+      most recent projects.</p>
     <hr>
 
     <ul class="grid">
@@ -62,7 +70,8 @@
       <li>
         <i class="fa fa-pencil-square-o fa-4x"></i>
         <h4>Web Design</h4>
-        <p>Create the perfect design to fit you and your business. Custom Logo's, Animations, Layout, you name it I create it.</p>
+        <p>Create the perfect design to fit you and your business. Custom Logo's, Animations, Layout, you name it I
+          create it.</p>
       </li>
       <li>
         <i class="fa fa-bicycle fa-4x"></i>
@@ -85,7 +94,8 @@
   <section class="testimonials">
     <h3 class="title">Testimonials from our customers:</h3>
     <hr>
-    <p class="quote">Wow! My salesa are throught teh roof after updatring my site with SERO and using your digitral media skillz.</p>
+    <p class="quote">Wow! My salesa are throught teh roof after updatring my site with SERO and using your digitral
+      media skillz.</p>
     <p class="author">- The Light Walk</p>
     <p class="quote">I love the custom Logo.</p>
     <p class="author">- Igor Perun</p>
@@ -114,4 +124,5 @@
   </footer>
   <script src="assets/js/typer.js"></script>
 </body>
+
 </html>
