changed the nav bar

--- a/index.html
+++ b/index.html
@@ -20,9 +20,19 @@
     </div>
     </div>
     <div class="menu-icon header__item">
-      <span class="menu-icon__line">
-
+      <span class="menu-icon__toggle">
+        <i></i>
+        <i></i>
+        <i></i>
       </span>
+      <div class="menu-icon__content">
+        <ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Services</li>
+          <li>Contact</li>
+        </ul>
+      </div>
 
     </div>
   </header>
@@ -122,6 +132,7 @@
       <li><a href="#"><i class="fa fa-snapchat-square fa-2x"></i></a></li>
     </ul>
   </footer>
+  <script src="assets/js/script.js"></script>
   <script src="assets/js/typer.js"></script>
 </body>
 
