--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>4Kreative</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
-
+  <!-- ##### HEADER ##### -->
   <header class="header-home">
     <div class="header-logo">
       <a class="logo" href="index.html">
@@ -36,7 +35,7 @@
 
     </div>
   </header>
-
+  <!-- ##### LANDING PAGE ##### -->
   <section class="hero">
     <div class="side__bar">
       <svg class="line" height="6" width="40">
@@ -52,11 +51,9 @@
           data-colors="#333" data-delay="92" data-deleteDelay="3000"></span>
         <span class="cursor" data-owner="main"></span>
       </div>
-      </h3>
-
     </div>
   </section>
-
+  <!-- ##### WORKS ##### -->
   <section class="destinations">
     <h3 class="title">Some of our Creations:</h3>
     <p>Tired of sub-par solutions? At 4Kreative we strive on creating the best services for our customers. Here are our
