changed nav icon

--- a/index.html
+++ b/index.html
@@ -18,21 +18,10 @@
       </a>
     </div>
     </div>
-    <div class="menu-icon header__item">
-      <span class="menu-icon__toggle">
-        <i></i>
-        <i></i>
-        <i></i>
-      </span>
-      <div class="menu-icon__content">
-        <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Services</li>
-          <li>Contact</li>
-        </ul>
-      </div>
-
+    <div class="nav-icon">
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
   </header>
   <!-- ##### LANDING PAGE ##### -->
