added ink animation

--- a/index.html
+++ b/index.html
@@ -17,13 +17,34 @@
         <img src="assets\img\logo4k.png" alt="4KREATIVE">
       </a>
     </div>
-    </div>
     <div class="nav-icon">
       <span></span>
       <span></span>
       <span></span>
     </div>
   </header>
+      <!-- Full Menu -->
+<div class="full-menu">
+	<div class="fullmenu-content">
+		<ul class="page-menu">
+			<li><a class="active" href="index.html">Home</a></li>
+			<li><a href="">About</a></li>
+			<li><a href="">Blog Posts</a></li>
+			<li><a href="">Contact</a></li>
+			<li><a href="#">Buy Now</a></li>
+			<li class="social">
+				<a href="#"><img src="icons/social/twitter.svg" alt=""></a>
+				<a href="#"><img src="icons/social/dribbble.svg" alt=""></a>
+				<a href="#"><img src="icons/social/instagram.svg" alt=""></a>
+				<a href="#"><img src="icons/social/send.svg" alt=""></a>
+			</li>
+		</ul>
+	</div>
+	<a href="#0" class="modal-close">Close</a>
+</div>
+<div class="cd-transition-layer visible opening">
+	<div class="bg-layer"></div>
+</div><!-- Ink Transition -->
   <!-- ##### LANDING PAGE ##### -->
   <section class="hero">
     <div class="side__bar">
@@ -118,6 +139,7 @@
       <li><a href="#"><i class="fa fa-snapchat-square fa-2x"></i></a></li>
     </ul>
   </footer>
+  <script src="jquery-2.1.4.min.js"></script>
   <script src="assets/js/script.js"></script>
   <script src="assets/js/typer.js"></script>
 </body>
