removed image preload event

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 		<ul class="page-menu">
 			<li><a class="active" href="index.html">Home</a></li>
 			<li><a href="">About</a></li>
-			<li><a href="">Blog Posts</a></li>
-			<li><a href="">Contact</a></li>
-			<li><a href="#">Buy Now</a></li>
+			<li><a href="">Services</a></li>
+			<li><a href="">Projects</a></li>
+			<li><a href="#">Contact</a></li>
 			<li class="social">
 				<a href="#"><img src="icons/social/twitter.svg" alt=""></a>
 				<a href="#"><img src="icons/social/dribbble.svg" alt=""></a>
@@ -42,7 +42,7 @@
 	</div>
 	<a href="#0" class="modal-close">Close</a>
 </div>
-<div class="cd-transition-layer visible opening">
+<div class="cd-transition-layer">
 	<div class="bg-layer"></div>
 </div><!-- Ink Transition -->
   <!-- ##### LANDING PAGE ##### -->
