--- a/services.html
+++ b/services.html
@@ -10,11 +10,12 @@
 </head>
 
 <body>
+
     <div class="screen-wipe-top"></div>
     <div class="screen-wipe-bottom"></div>
   <div id="barba-wrapper">
     <div class="barba-container">
-  <!-- ##### HEADER ##### -->
+        <!-- ##### HEADER ##### -->
   <header class="header-home">
     <div class="header-logo">
       <a class="logo" href="index.html">
@@ -32,10 +33,10 @@
 	<div class="fullmenu-content">
 		<ul class="page-menu">
 			<li><a class="active" href="index.html">Home</a></li>
-			<li><a href="">About</a></li>
-			<li><a href="">Services</a></li>
-			<li><a href="">Projects</a></li>
-			<li><a href="#">Contact</a></li>
+			<li><a href="about.html">About</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="contact.html">Contact</a></li>
 			<li class="social">
 				<a href="#"><img src="icons/social/twitter.svg" alt=""></a>
 				<a href="#"><img src="icons/social/dribbble.svg" alt=""></a>
