added about section

--- a/about.html
+++ b/about.html
@@ -10,24 +10,19 @@
 </head>
 
 <body>
-
-<div class="screen-wipe-top"></div>
-<div class="screen-wipe-bottom"></div>
-<div id="barba-wrapper">
-  <div class="barba-container">
-      <!-- ##### HEADER ##### -->
+  <!-- ##### HEADER ##### -->
   <header class="header-home">
-      <div class="header-logo">
-        <a class="logo" href="index.html">
-          <img src="assets\img\logo4k.png" alt="4KREATIVE">
-        </a>
-      </div>
-      <div class="nav-icon">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </header>
+    <div class="header-logo">
+      <a class="logo" href="index.html">
+        <img src="assets\img\logo4k.png" alt="4KREATIVE">
+      </a>
+    </div>
+    <div class="nav-icon">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </header>
         <!-- Full Menu -->
   <div class="full-menu">
     <div class="fullmenu-content">
@@ -47,54 +42,40 @@
     </div>
     <a href="#0" class="modal-close">Close</a>
   </div>
+
   <div class="cd-transition-layer">
     <div class="bg-layer"></div>
   </div><!-- Ink Transition -->
 
+  <div class="screen-wipe-top"></div>
+  <div class="screen-wipe-bottom"></div>
 
+  <div id="barba-wrapper">
+    <div class="barba-container">
 
-    <section class="testimonials">
-      <h3 class="title">Testimonials from our customers:</h3>
-      <hr>
-      <p class="quote">Wow! My salesa are throught teh roof after updatring my site with SERO and using your digitral
-        media skillz.</p>
-      <p class="author">- The Light Walk</p>
-      <p class="quote">I love the custom Logo.</p>
-      <p class="author">- Igor Perun</p>
-      <p class="quote">My eccomerce site is doing great.</p>
-      <p class="author">- Tim John</p>
-    </section>
-
-    <section class="contact">
-      <h3 class="title">Learn more</h3>
-      <p>Lets work together</p>
-      <hr>
-      <form>
-        <input type="email" placeholder="Email">
-        <a href="#" class="btn">Subscribe now</a>
-      </form>
-    </section>
-
-    <footer>
-
-      <p>Why are you even reading this?! There's never anything interesting in the footer!</p>
-      <ul>
-        <li><a href="#"><i class="fa fa-twitter-square fa-2x"></i></a></li>
-        <li><a href="#"><i class="fa fa-facebook-square fa-2x"></i></a></li>
-        <li><a href="#"><i class="fa fa-snapchat-square fa-2x"></i></a></li>
-      </ul>
-    </footer>
-
-
+      <div id="about">
+        <div id="showcase">
+          <img src="assets/img/ivanPerun.jpg" alt="Ivan" class="cloud9-item">
+          <img src="assets/img/tarasKurilo.jpg" alt="Taras" class="cloud9-item">
+          <img src="assets/img/igorPerun.jpg" alt="Igor" class="cloud9-item">
+        </div>
+        <p id="showcase-title">&nbsp;</p>
+        <div class="nav noselect">
+          <button class="left"><i class="fa fa-arrow-left"></i></button>
+          <button class="right"><i class="fa fa-arrow-right"></i></button>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
 
   <script src="assets/js/vendor/jquery-2.1.4.min.js"></script>
   <script src="assets/js/vendor/barba.min.js" type="text/javascript"></script>
   <script src="assets/js/transition.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+  <script src="assets/js/reflection.js"></script>
+  <script src="assets/js/jquery.cloud9carousel.js"></script>
   <script src="assets/js/script.js"></script>
-  <script src="assets/js/typer.js"></script>
+
 </body>
 
 </html>
