--- a/index.html
+++ b/index.html
@@ -23,90 +23,98 @@
       <span></span>
     </div>
   </header>
-<div class="screen-wipe-top"></div>
-<div class="screen-wipe-bottom"></div>
-<div id="barba-wrapper">
-  <div class="barba-container">
+  <div class="screen-wipe-top"></div>
+  <div class="screen-wipe-bottom"></div>
+  <div id="barba-wrapper">
+    <div class="barba-container">
 
 
-        <!-- Full Menu -->
-  <div class="full-menu">
-    <div class="fullmenu-content">
-      <ul class="page-menu">
-        <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li class="social">
-          <a href="#"><img src="icons/social/twitter.svg" alt=""></a>
-          <a href="#"><img src="icons/social/dribbble.svg" alt=""></a>
-          <a href="#"><img src="icons/social/instagram.svg" alt=""></a>
-          <a href="#"><img src="icons/social/send.svg" alt=""></a>
-        </li>
-      </ul>
-    </div>
-    <a href="#0" class="modal-close">Close</a>
-  </div>
-  <div class="cd-transition-layer">
-    <div class="bg-layer"></div>
-  </div><!-- Ink Transition -->
-    <!-- ##### LANDING PAGE ##### -->
-    <section class="hero">
-      <div class="side__bar">
-        <svg class="line" height="6" width="40">
-          <line style="stroke:#9ea0a6;stroke-width:2" x1="0" x2="30" y1="0" y2="0"></line>
-        </svg> Welcome
-      </div>
-      <div class="background-image"></div>
-      <div class="hero-content-area">
-        <h1 class="reveal"><span>Your Ideas</span></h1>
-        <h1 class="reveal" id="revTwo"><span>Brought to Life</span></h1>
-        <div class="typing">
-          <span class="typer" id="main" data-words="Websites That Drive Businness, Powerful SEO Marketing, Dedicated to Your Success"
-            data-colors="#333" data-delay="92" data-deleteDelay="3000"></span>
-          <span class="cursor" data-owner="main"></span>
+      <!-- Full Menu -->
+      <div class="full-menu">
+        <div class="fullmenu-content">
+          <ul class="page-menu">
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li class="social">
+              <a href="#"><img src="icons/social/twitter.svg" alt=""></a>
+              <a href="#"><img src="icons/social/dribbble.svg" alt=""></a>
+              <a href="#"><img src="icons/social/instagram.svg" alt=""></a>
+              <a href="#"><img src="icons/social/send.svg" alt=""></a>
+            </li>
+          </ul>
         </div>
+        <a href="#0" class="modal-close">Close</a>
       </div>
-    </section>
-    <!-- ##### WORKS ##### -->
+      <div class="cd-transition-layer">
+        <div class="bg-layer"></div>
+      </div><!-- Ink Transition -->
+      <!-- ##### LANDING PAGE ##### -->
+      <section class="hero">
+        <div class="kreative">4KREATIVE</div>
+        <div class="side__bar">
+          <svg class="line" height="6" width="40">
+            <line style="stroke:#9ea0a6;stroke-width:2" x1="0" x2="30" y1="0" y2="0"></line>
+          </svg> Welcome
+        </div>
+        <ul class="social__main_list">
+          <li class="social__main">
+          <li><a href="#"><i class="fa fa-twitter-square fa-2x"></i></a></li>
+          <li><a href="#"><i class="fa fa-facebook-square fa-2x"></i></a></li>
+          <li><a href="#"><i class="fa fa-snapchat-square fa-2x"></i></a></li>
+          </li>
+        </ul>
+        <div class="background-image"></div>
+        <div class="hero-content-area">
+          <h1 class="reveal"><span>Your Ideas</span></h1>
+          <h1 class="reveal" id="revTwo"><span>Brought to Life</span></h1>
+          <div class="typing">
+            <span class="typer" id="main" data-words="Websites That Drive Businness, Powerful SEO Marketing, Dedicated to Your Success"
+              data-colors="#333" data-delay="92" data-deleteDelay="3000"></span>
+            <span class="cursor" data-owner="main"></span>
+          </div>
+        </div>
+      </section>
+      <!-- ##### WORKS ##### -->
 
 
-    <section class="testimonials">
-      <h3 class="title">Testimonials from our customers:</h3>
-      <hr>
-      <p class="quote">Wow! My salesa are throught teh roof after updatring my site with SERO and using your digitral
-        media skillz.</p>
-      <p class="author">- The Light Walk</p>
-      <p class="quote">I love the custom Logo.</p>
-      <p class="author">- Igor Perun</p>
-      <p class="quote">My eccomerce site is doing great.</p>
-      <p class="author">- Tim John</p>
-    </section>
+      <section class="testimonials">
+        <h3 class="title">Testimonials from our customers:</h3>
+        <hr>
+        <p class="quote">Wow! My salesa are throught teh roof after updatring my site with SERO and using your digitral
+          media skillz.</p>
+        <p class="author">- The Light Walk</p>
+        <p class="quote">I love the custom Logo.</p>
+        <p class="author">- Igor Perun</p>
+        <p class="quote">My eccomerce site is doing great.</p>
+        <p class="author">- Tim John</p>
+      </section>
 
-    <section class="contact">
-      <h3 class="title">Learn more</h3>
-      <p>Lets work together</p>
-      <hr>
-      <form>
-        <input type="email" placeholder="Email">
-        <a href="#" class="btn">Subscribe now</a>
-      </form>
-    </section>
+      <section class="contact">
+        <h3 class="title">Learn more</h3>
+        <p>Lets work together</p>
+        <hr>
+        <form>
+          <input type="email" placeholder="Email">
+          <a href="#" class="btn">Subscribe now</a>
+        </form>
+      </section>
 
-    <footer>
+      <footer>
 
-      <p>Why are you even reading this?! There's never anything interesting in the footer!</p>
-      <ul>
-        <li><a href="#"><i class="fa fa-twitter-square fa-2x"></i></a></li>
-        <li><a href="#"><i class="fa fa-facebook-square fa-2x"></i></a></li>
-        <li><a href="#"><i class="fa fa-snapchat-square fa-2x"></i></a></li>
-      </ul>
-    </footer>
+        <p>Why are you even reading this?! There's never anything interesting in the footer!</p>
+        <ul>
+          <li><a href="#"><i class="fa fa-twitter-square fa-2x"></i></a></li>
+          <li><a href="#"><i class="fa fa-facebook-square fa-2x"></i></a></li>
+          <li><a href="#"><i class="fa fa-snapchat-square fa-2x"></i></a></li>
+        </ul>
+      </footer>
 
 
+    </div>
   </div>
-</div>
 
   <script src="assets/js/vendor/jquery-2.1.4.min.js"></script>
   <script src="assets/js/vendor/barba.min.js" type="text/javascript"></script>
