update spacing for KREATIVE and socails

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         </div>
         <ul class="social__main_list">
           <li class="social__main">
-          <li><a href="#"><i class="fa fa-twitter-square fa-2x"></i></a></li>
-          <li><a href="#"><i class="fa fa-facebook-square fa-2x"></i></a></li>
-          <li><a href="#"><i class="fa fa-snapchat-square fa-2x"></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter fa-2x"></i></a></li>
+          <li><a href="#"><i class="fa fa-facebook fa-2x"></i></a></li>
+          <li><a href="#"><i class="fa fa-snapchat fa-2x"></i></a></li>
           </li>
         </ul>
         <div class="background-image"></div>
