--- a/about.html
+++ b/about.html
@@ -52,6 +52,35 @@
 
   <div id="barba-wrapper">
     <div class="barba-container">
+        <section class="packages">
+            <h3 class="title">Services</h3>
+            <p>We offer a variety of services. Whether you're looking for a custom logo to an eccomerce solution.</p>
+            <hr>
+
+            <ul class="grid">
+              <li>
+                <i class="fa fa-pencil-square-o fa-4x"></i>
+                <h4>Web Design</h4>
+                <p>Create the perfect design to fit you and your business. Custom Logo's, Animations, Layout, you name it I
+                  create it.</p>
+              </li>
+              <li>
+                <i class="fa fa-bicycle fa-4x"></i>
+                <h4>SEO</h4>
+                <p>Optimize your website with latest SEO hacks for max traffic.</p>
+              </li>
+              <li>
+                <i class="fa fa-bicycle fa-4x"></i>
+                <h4>Custom Websites</h4>
+                <p>We use variety of different technologies to build the site of your dreams.</p>
+              </li>
+              <li>
+                <i class="fa fa-flag-checkered fa-4x"></i>
+                <h4>Marketing</h4>
+                <p>Market your site on every social media platform.</p>
+              </li>
+            </ul>
+          </section>
     </div>
   </div>
 
