--- a/projects.html
+++ b/projects.html
@@ -11,67 +11,56 @@
 
 <body>
 
-    <div class="screen-wipe-top"></div>
-    <div class="screen-wipe-bottom"></div>
+  <div class="screen-wipe-top"></div>
+  <div class="screen-wipe-bottom"></div>
   <div id="barba-wrapper">
     <div class="barba-container">
       <!-- ##### HEADER ##### -->
-  <header class="header-home">
-      <div class="header-logo">
-        <a class="logo" href="index.html">
-          <img src="assets\img\logo4k.png" alt="4KREATIVE">
-        </a>
-      </div>
-      <div class="nav-icon">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </header>
+      <header class="header-home">
+        <div class="header-logo">
+          <a class="logo" href="index.html">
+            <img src="assets\img\logo4k.png" alt="4KREATIVE">
+          </a>
+        </div>
+        <div class="nav-icon">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </header>
       <!-- Full Menu -->
-<div class="full-menu">
-	<div class="fullmenu-content">
-		<ul class="page-menu">
-			<li><a class="active" href="index.html">Home</a></li>
-			<li><a href="about.html">About</a></li>
-			<li><a href="services.html">Services</a></li>
-			<li><a href="projects.html">Projects</a></li>
-			<li><a href="contact.html">Contact</a></li>
-			<li class="social">
-				<a href="#"><img src="icons/social/twitter.svg" alt=""></a>
-				<a href="#"><img src="icons/social/dribbble.svg" alt=""></a>
-				<a href="#"><img src="icons/social/instagram.svg" alt=""></a>
-				<a href="#"><img src="icons/social/send.svg" alt=""></a>
-			</li>
-		</ul>
-	</div>
-	<a href="#0" class="modal-close">Close</a>
-</div>
-<div class="cd-transition-layer">
-	<div class="bg-layer"></div>
-</div><!-- Ink Transition -->
-  <!-- ##### LANDING PAGE ##### -->
+      <div class="full-menu">
+        <div class="fullmenu-content">
+          <ul class="page-menu">
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li class="social">
+              <a href="#"><img src="icons/social/twitter.svg" alt=""></a>
+              <a href="#"><img src="icons/social/dribbble.svg" alt=""></a>
+              <a href="#"><img src="icons/social/instagram.svg" alt=""></a>
+              <a href="#"><img src="icons/social/send.svg" alt=""></a>
+            </li>
+          </ul>
+        </div>
+        <a href="#0" class="modal-close">Close</a>
+      </div>
+      <div class="cd-transition-layer">
+        <div class="bg-layer"></div>
+      </div><!-- Ink Transition -->
+      <!-- ##### LANDING PAGE ##### -->
 
-  <!-- ##### WORKS ##### -->
-  <section class="destinations">
-    <h3 class="title">Some of our Creations:</h3>
-    <p>Tired of sub-par solutions? At 4Kreative we strive on creating the best services for our customers. Here are our
-      most recent projects.</p>
-    <hr>
-
-    <ul class="grid">
-      <li class="small" style="background-image: url(assets/img/mountain1.jpg);"></li>
-      <li class="large" style="background-image: url(assets/img/mountain2.jpg);"></li>
-      <li class="large" style="background-image: url(assets/img/mountain3.jpg);"></li>
-      <li class="small" style="background-image: url(assets/img/mountain4.jpg);"></li>
-    </ul>
-  </section>
+      <!-- ##### WORKS ##### -->
+      <section class="works">
+        <h3 class="title">Some of our Creations:</h3>
+        <ul class="grid">
+          <li class="large" style="background-image: url(assets/img/b&lmockup-min.png);"></li>
+        </ul>
+      </section>
+    </div>
   </div>
-</div>
-
-
-
-
 
   <script src="assets/js/vendor/jquery-2.1.4.min.js"></script>
   <script src="assets/js/vendor/barba.min.js" type="text/javascript"></script>
