3 projects added, two columns

--- a/projects.html
+++ b/projects.html
@@ -50,14 +50,30 @@
       <div class="cd-transition-layer">
         <div class="bg-layer"></div>
       </div><!-- Ink Transition -->
-      <!-- ##### LANDING PAGE ##### -->
-
       <!-- ##### WORKS ##### -->
       <section class="works">
-        <h3 class="title">Some of our Creations:</h3>
-        <ul class="grid">
-          <li class="large" style="background-image: url(assets/img/b&lmockup-min.png);"></li>
-        </ul>
+        <h2 class="title">Recent Works</h2>
+        <div class="row work_1">
+          <div class="blcremation"> <img src="assets/img/b&lmockup-min.png" alt="bl" style="width:100%;"></div>
+          <div class="bltext">
+            <h3 class="bl_title">B&L Cremation Systems</h3>
+            <p class="bl_info">Information.................</p>
+          </div>
+        </div>
+        <div class="row work_2">
+          <div class="lightwalk"> <img src="assets/img/b&lmockup-min.png" alt="bl" style="width:100%;"></div>
+          <div class="lwtext">
+            <h3 class="lw_title">B&L Cremation Systems</h3>
+            <p class="lw_info">Information.................</p>
+          </div>
+        </div>
+        <div class="row work_3">
+          <div class="design"> <img src="assets/img/b&lmockup-min.png" alt="bl" style="width:100%;"></div>
+          <div class="designtext">
+            <h3 class="design_title">B&L Cremation Systems</h3>
+            <p class="design_info">Information.................</p>
+          </div>
+        </div>
       </section>
     </div>
   </div>
