3 mockups created, and shadows added

--- a/projects.html
+++ b/projects.html
@@ -61,14 +61,14 @@
           </div>
         </div>
         <div class="row work_2">
-          <div class="lightwalk"> <img src="assets/img/b&lmockup-min.png" alt="bl" style="width:100%;"></div>
+          <div class="lightwalk"> <img src="assets/img/lightmockup-min.png" alt="bl" style="width:100%;"></div>
           <div class="lwtext">
             <h3 class="lw_title">B&L Cremation Systems</h3>
             <p class="lw_info">Information.................</p>
           </div>
         </div>
         <div class="row work_3">
-          <div class="design"> <img src="assets/img/b&lmockup-min.png" alt="bl" style="width:100%;"></div>
+          <div class="design"> <img src="assets/img/designmockup-min.png" alt="bl" style="width:100%;"></div>
           <div class="designtext">
             <h3 class="design_title">B&L Cremation Systems</h3>
             <p class="design_info">Information.................</p>
