--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
   <div id="barba-wrapper">
     <div class="barba-container">
       <!-- ##### HEADER ##### -->
-  <header class="header-home">
-      <div class="header-logo">
-        <a class="logo" href="index.html">
-          <img src="assets\img\logo4k.png" alt="4KREATIVE">
-        </a>
-      </div>
-      <div class="nav-icon">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </header>
+      <header class="header-home">
+        <div class="header-logo">
+          <a class="logo" href="index.html">
+            <img src="assets\img\logo4k.png" alt="4KREATIVE">
+          </a>
+        </div>
+        <div class="nav-icon">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </header>
 
       <!-- Full Menu -->
       <div class="full-menu">
@@ -75,6 +75,15 @@
               data-colors="#333" data-delay="92" data-deleteDelay="3000"></span>
             <span class="cursor" data-owner="main"></span>
           </div>
+        </div>
+        <div class="main_button">
+            <div class="button">
+                <a href="#">
+                  Contact Us
+                  <span class="shift">›</span>
+                </a>
+                <div class="mask"></div>
+              </div>
         </div>
       </section>
     </div>
