changed html tag names

--- a/projects.html
+++ b/projects.html
@@ -53,11 +53,11 @@
       <!-- ##### WORKS ##### -->
       <section class="works">
         <h2 class="title">Recent Works</h2>
-        <div class="row work_1">
-          <div class="blcremation"> <img src="assets/img/b&lmockup-min.png" alt="bl" style="width:100%;"></div>
-          <div class="bltext">
-            <h3 class="bl_title">B&L Cremation Systems</h3>
-            <p class="bl_info">Information.................</p>
+        <div class="row work">
+          <div class="work_img"> <img src="assets/img/b&lmockup-min.png" alt="bl" style="width:100%;"></div>
+          <div class="work_text">
+            <h3 class="work_title">B&L Cremation Systems</h3>
+            <p class="work_info">Information.................</p>
           </div>
         </div>
         <div class="row work_2">
