--- a/projects.html
+++ b/projects.html
@@ -58,8 +58,12 @@
           <div class="work_text">
             <h3 class="work_title">B&L Cremation Systems</h3>
             <p class="work_info">Information.................</p>
+            <a href=""><button>Visit Site</button></a>
           </div>
+          <button class="leftBtn">Prev</button>
+        <button class="rightBtn">Next</button>
         </div>
+
         <div class="row work_2">
           <div class="lightwalk"> <img src="assets/img/lightmockup-min.png" alt="bl" style="width:100%;"></div>
           <div class="lwtext">
