--- a/projects.html
+++ b/projects.html
@@ -60,8 +60,8 @@
             <p class="work_info">Information.................</p>
             <a href=""><button>Visit Site</button></a>
           </div>
-          <button class="leftBtn">Prev</button>
-        <button class="rightBtn">Next</button>
+          <div class="side-nav side-nav--right ">Next</div>
+        <div class="side-nav side-nav--left">Prev</div>
         </div>
 
         <div class="row work_2">
