--- a/projects.html
+++ b/projects.html
@@ -51,34 +51,61 @@
         <div class="bg-layer"></div>
       </div><!-- Ink Transition -->
       <!-- ##### WORKS ##### -->
-      <section class="works">
-        <h2 class="title">Recent Works</h2>
-        <div class="row work">
-          <div class="work_img"> <img src="assets/img/b&lmockup-min.png" alt="bl" style="width:100%;"></div>
-          <div class="work_text">
-            <h3 class="work_title">B&L Cremation Systems</h3>
-            <p class="work_info">Information.................</p>
-            <a href=""><button>Visit Site</button></a>
+      <div id="app" data-state="0">
+        <div class="ui-big-images">
+          <div class="ui-big-image" data-key="0">
+            <img src="assets/img/b&lmockup-min.png" alt=""/>
           </div>
-          <div class="side-nav side-nav--right ">Next</div>
-        <div class="side-nav side-nav--left">Prev</div>
+          <div class="ui-big-image" data-key="1">
+            <img src="assets/img/lightmockup-min.png" alt=""/>
+          </div>
+          <div class="ui-big-image" data-key="2">
+            <img src="assets/img/designmockup-min.png" alt=""/>
+          </div>
         </div>
+        <div class="ui-thumbnails">
+          <div class="ui-thumbnail" tabindex="-1" data-key="0">
+            <img src="assets/img/b&lmockup-min.png" alt="" />
+            <div class="ui-cuticle" data-flip-key="cuticle"></div>
+          </div>
+          <div class="ui-thumbnail" tabindex="-1" data-key="1">
+            <img src="assets/img/lightmockup-min.png" alt="" />
+            <div class="ui-cuticle" data-flip-key="cuticle"></div>
+          </div>
+          <div class="ui-thumbnail" tabindex="-1" data-key="2">
+            <img src="assets/img/designmockup-min.png" alt="" />
+            <div class="ui-cuticle" data-flip-key="cuticle"></div>
+          </div>
+        </div>
+        <div class="ui-content">
 
-        <div class="row work_2">
-          <div class="lightwalk"> <img src="assets/img/lightmockup-min.png" alt="bl" style="width:100%;"></div>
-          <div class="lwtext">
-            <h3 class="lw_title">B&L Cremation Systems</h3>
-            <p class="lw_info">Information.................</p>
+          <nav class="ui-nav">
+            <button id="prev" tabindex="-1" title="Previous">&lt;</button>
+            <button id="next" tabindex="-1" title="Next">&gt;</button>
+          </nav>
+
+          <div class="ui-articles">
+            <article class="ui-article" data-key="0">
+              <h2 class="ui-heading">B&L Cremation Systems</h2>
+              <p class="ui-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.
+              </p>
+              <a href=""><button>Visit Site</button></a>
+            </article>
+            <article class="ui-article" data-key="1">
+              <h2 class="ui-heading">The Light Walk</h2>
+              <p class="ui-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Quod sapiente soluta iusto molestias ullam.
+              </p>
+              <a href=""><button>Visit Site</button></a>
+            </article>
+            <article class="ui-article" data-key="2">
+              <h2 class="ui-heading">Designershopp</h2>
+              <p class="ui-paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
+            </article>
           </div>
         </div>
-        <div class="row work_3">
-          <div class="design"> <img src="assets/img/designmockup-min.png" alt="bl" style="width:100%;"></div>
-          <div class="designtext">
-            <h3 class="design_title">B&L Cremation Systems</h3>
-            <p class="design_info">Information.................</p>
-          </div>
-        </div>
-      </section>
+      </div>
     </div>
   </div>
 
@@ -86,6 +113,8 @@
   <script src="assets/js/vendor/barba.min.js" type="text/javascript"></script>
   <script src="assets/js/transition.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+  <script src="https://unpkg.com/flipping@1.1.0/dist/flipping.web.js"></script>
+  <script src="assets/js/works.js"></script>
   <script src="assets/js/script.js"></script>
 </body>
 
