--- a/index.html
+++ b/index.html
@@ -77,17 +77,23 @@
           </div>
         </div>
         <div class="main_button">
-            <div class="button">
-                <a href="#">
-                  Contact Us
-                  <span class="shift">›</span>
-                </a>
-                <div class="mask"></div>
-              </div>
+          <div class="button" id="services_btn">
+            <a href="#">
+              Services
+              <span class="shift">›</span>
+            </a>
+          </div>
+          <div class="button" id="contact_btn">
+            <a href="#">
+              Contact Us
+              <span class="shift">›</span>
+            </a>
+          </div>
         </div>
       </section>
     </div>
   </div>
+
 
   <script src="assets/js/vendor/jquery-2.1.4.min.js"></script>
   <script src="assets/js/vendor/barba.min.js" type="text/javascript"></script>
