--- a/work.html
+++ b/work.html
@@ -32,10 +32,10 @@
       <div class="full-menu">
         <div class="fullmenu-content">
           <ul class="page-menu">
-            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="projects.html">Projects</a></li>
+            <li><a href="work.html">Work</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li class="social">
               <a href="#"><img src="icons/social/twitter.svg" alt=""></a>
