updated work section

--- a/work.html
+++ b/work.html
@@ -51,57 +51,58 @@
         <div class="bg-layer"></div>
       </div><!-- Ink Transition -->
       <!-- ##### WORKS ##### -->
-      <div id="app" data-state="0">
-        <div class="ui-big-images">
-          <div class="ui-big-image" data-key="0">
+      <div id="work" data-state="0">
+        <div class="work-big-images">
+          <div class="work-big-image" data-key="0">
             <img src="assets/img/b&lmockup-min.png" alt=""/>
           </div>
-          <div class="ui-big-image" data-key="1">
+          <div class="work-big-image" data-key="1">
             <img src="assets/img/lightmockup-min.png" alt=""/>
           </div>
-          <div class="ui-big-image" data-key="2">
+          <div class="work-big-image" data-key="2">
             <img src="assets/img/designmockup-min.png" alt=""/>
           </div>
         </div>
-        <div class="ui-thumbnails">
-          <div class="ui-thumbnail" tabindex="-1" data-key="0">
+        <div class="work-thumbnails">
+          <div class="work-thumbnail" tabindex="-1" data-key="0">
             <img src="assets/img/b&lmockup-min.png" alt="" />
-            <div class="ui-cuticle" data-flip-key="cuticle"></div>
+            <div class="work-cuticle" data-flip-key="cuticle"></div>
           </div>
-          <div class="ui-thumbnail" tabindex="-1" data-key="1">
+          <div class="work-thumbnail" tabindex="-1" data-key="1">
             <img src="assets/img/lightmockup-min.png" alt="" />
-            <div class="ui-cuticle" data-flip-key="cuticle"></div>
+            <div class="work-cuticle" data-flip-key="cuticle"></div>
           </div>
-          <div class="ui-thumbnail" tabindex="-1" data-key="2">
+          <div class="work-thumbnail" tabindex="-1" data-key="2">
             <img src="assets/img/designmockup-min.png" alt="" />
-            <div class="ui-cuticle" data-flip-key="cuticle"></div>
+            <div class="work-cuticle" data-flip-key="cuticle"></div>
           </div>
         </div>
-        <div class="ui-content">
+        <div class="work-content">
 
-          <nav class="ui-nav">
+          <nav class="work-nav">
             <button id="prev" tabindex="-1" title="Previous">&lt;</button>
             <button id="next" tabindex="-1" title="Next">&gt;</button>
           </nav>
 
-          <div class="ui-articles">
-            <article class="ui-article" data-key="0">
-              <h2 class="ui-heading">B&L Cremation Systems</h2>
-              <p class="ui-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          <div class="work-articles">
+            <article class="work-article" data-key="0">
+              <h2 class="work-heading">B&L Cremation Systems</h2>
+              <p class="work-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.
               </p>
               <a href=""><button>Visit Site</button></a>
             </article>
-            <article class="ui-article" data-key="1">
-              <h2 class="ui-heading">The Light Walk</h2>
-              <p class="ui-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            <article class="work-article" data-key="1">
+              <h2 class="work-heading">The Light Walk</h2>
+              <p class="work-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Quod sapiente soluta iusto molestias ullam.
               </p>
               <a href=""><button>Visit Site</button></a>
             </article>
-            <article class="ui-article" data-key="2">
-              <h2 class="ui-heading">Designershopp</h2>
-              <p class="ui-paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
+            <article class="work-article" data-key="2">
+              <h2 class="work-heading">Designershopp</h2>
+              <p class="work-paragraph">Seo, Branding, Logo,Template Design </p>
+              <a href=""><button>Visit Site</button></a>
             </article>
           </div>
         </div>
