--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
         <div class="background-image"></div>
         <div class="hero-content-area">
           <h1 class="reveal"><span>Your Ideas</span></h1>
-          <h1 class="reveal" id="revTwo"><span>Brought to Life</span></h1>
+          <h1 class="reveal" id="revTwo"><span>Brought To Life</span></h1>
           <div class="typing">
             <span class="typer" id="main" data-words="Websites That Drive Businness, Powerful SEO Marketing, Dedicated to Your Success"
-              data-colors="#333" data-delay="92" data-deleteDelay="3000"></span>
+              data-colors="#333" data-delay="86" data-deleteDelay="3000"></span>
             <span class="cursor" data-owner="main"></span>
           </div>
         </div>
@@ -80,13 +80,11 @@
           <div class="button" id="services_btn">
             <a href="#">
               Services
-              <span class="shift">›</span>
             </a>
           </div>
           <div class="button" id="contact_btn">
             <a href="#">
               Contact Us
-              <span class="shift">›</span>
             </a>
           </div>
         </div>
