fonts added/ button styles updated and colors

--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
         <div class="main_button">
           <div class="button" id="services_btn">
             <a href="#">
-              Services
+              <span>&raquo;</span> Services
             </a>
           </div>
           <div class="button" id="contact_btn">
             <a href="#">
-              Contact Us
+              <span>&raquo;</span> Contact Us
             </a>
           </div>
         </div>
