--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="kreative">4KREATIVE</div>
         <div class="side__bar">
           <svg class="line" height="6" width="40">
-            <line style="stroke:#9ea0a6;stroke-width:2" x1="0" x2="30" y1="0" y2="0"></line>
+            <line style="stroke:#3ee7d6;;stroke-width:2" x1="0" x2="30" y1="0" y2="0"></line>
           </svg> Welcome
         </div>
         <ul class="social__main_list">
@@ -79,12 +79,12 @@
         <div class="main_button">
           <div class="button" id="services_btn">
             <a href="#">
-              <span>&raquo;</span> Services
+              <span>&gt;</span> Services
             </a>
           </div>
           <div class="button" id="contact_btn">
             <a href="#">
-              <span>&raquo;</span> Contact Us
+              <span>&gt;</span> Contact Us
             </a>
           </div>
         </div>
