styling update of buttons and logo

--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
         <div class="main_button">
           <div class="button" id="services_btn">
             <a href="#">
-              <span>&gt;</span> Services
+              <span id="next">&rsaquo;</span> <span id="srv">Services</span>
             </a>
           </div>
           <div class="button" id="contact_btn">
             <a href="#">
-              <span>&gt;</span> Contact Us
+              <span id="next">&rsaquo;</span> <span id="cnt">Contact Us</span>
             </a>
           </div>
         </div>
