changed homepage id for buttons

--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
         <div class="main_button">
           <div class="button" id="services_btn">
             <a href="#">
-              <span id="next">&rsaquo;</span> <span id="srv">Services</span>
+              <span id="button_span">&rsaquo;</span> <span id="srv">Services</span>
             </a>
           </div>
           <div class="button" id="contact_btn">
             <a href="#">
-              <span id="next">&rsaquo;</span> <span id="cnt">Contact Us</span>
+              <span id="button_span">&rsaquo;</span> <span id="cnt">Contact Us</span>
             </a>
           </div>
         </div>
