set up analytics

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,14 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
   <link rel="stylesheet" href="assets/css/styles.css">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127294874-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'UA-127294874-2');
+  </script>
 </head>
 <body>
   <div class="screen-wipe-top"></div>
@@ -53,7 +60,7 @@
       <div class="bg-layer"></div>
     </div><!-- Ink Transition -->
     <section id="contact">
-      <h1>Contact Me</h1>
+      <h1>Contact</h1>
       <form action = "https://formspree.io/mail.4kreative@gmail.com" method="POST">
         <ul class="contact-form">
           <li class= "contact-input">
