--- a/services.html
+++ b/services.html
@@ -7,6 +7,14 @@
   <title>4Kreative</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/styles.css">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127294874-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-127294874-2');
+  </script>
 </head>
 
 <body>
