--- a/work.html
+++ b/work.html
@@ -5,6 +5,29 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>4Kreative</title>
+  <meta name="description" content="At 4Kreative we build bespoke websites to help our clients push their businesses further online. Whether it's simple Blog or an Eccomerce Site. I preach Secure, DRY & Structured development!">
+  <meta name="keywords" content="4Kreative, web development, design, fullstack, ecommerce, seo, Boston, MA, Clearwater, FL USA">
+  <meta name="author" content="Taras Kurilo, Ivan Perun">
+  <meta name= "robots" content="index, follow">
+  <meta name="DC.title" content="4Kreative" />
+  <meta name="geo.region" content="US-MA" />
+  <meta name="geo.placename" content="Stoughton" />
+  <meta name="geo.position" content="42.12291;-71.109201" />
+  <meta name="ICBM" content="42.12291, -71.109201" />
+
+  <link rel="canonical" href="https://www.4kreative.co/">
+  <link rel="publisher" href="https://plus.google.com/106437617603533510597">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="4Kreative Digital Media Marketing Agency">
+  <meta property="og:description" content="At 4Kreative we build bespoke websites to help our clients push their businesses further online. Whether it's simple Blog or an Eccomerce Site. I preach Secure, DRY & Structured development!. Contact me now.">
+  <meta property="og:url" content="https://www.4kreative.co/">
+  <meta property="og:site_name" content="4Kreative | Digital Media Marketing Agency, Web Developent, Design, Ecommerce in Boston &amp; MA &amp; & Clearwater &amp; FL &amp; USA">
+  <meta property="og:image" content="https://4kreative.co/img/logo.png">
+  <meta property="og:image:secure_url" content="https://4kreative.co/img/logo.png">
+  <meta property="og:image:width" content="960">
+  <meta property="og:image:height" content="720">
+  <meta property="og:image:alt" content="4 Kreative Digital Media Marketing Agency">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/styles.css">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127294874-2"></script>
