--- a/work.html
+++ b/work.html
@@ -30,6 +30,79 @@
   <meta property="og:image:alt" content="4 Kreative Digital Media Marketing Agency">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/styles.css">
+  <!-- Google Structured Data Rich Snippet Review Schema -->
+  <script type="application/ld+json">
+      {
+          "@context": "http://schema.org/",
+          "@type": "Review",
+          "itemReviewed": {
+              "@type": "Service",
+              "name": "4kreative.co"
+          },
+          "author": {
+              "@type": "Person",
+              "name": "Joe Smith"
+          },
+          "reviewRating": {
+              "@type": "Rating",
+              "ratingValue": "5",
+              "bestRating": "5"
+          }
+      }
+  </script>
+   <!-- Google Structured Data Person Schema -->
+   <script type="application/ld+json">
+      {
+          "@context": "http://schema.org",
+          "@type": "Person",
+          "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Stoughton",
+          "addressRegion": "MA",
+          "postalCode": "02072"
+          },
+          "email": "mail.4kreative@gmail.com",
+          "image": "https://4kreative.co/img/logo.png",
+          "jobTitle": "Web Developer",
+          "name": "Taras Kurilo",
+          "alumniOf": "Umass Boston",
+          "url": "https://www.taraskurilo.com",
+          "sameAs": [
+              "https://www.linkedin.com/in/taras-kurilo-4a922613a/",
+              "https://plus.google.com/106437617603533510597"
+          ],
+          "colleague": [
+              "http://perundesign.com/",
+              "https://iperun23.github.io/"
+          ]
+      }
+  </script>
+  <!-- Google Structured Data Website Schema -->
+  <script type="application/ld+json">
+      {
+          "@context": "http://schema.org",
+          "@type": "WebSite",
+          "@id":"#website",
+          "url": "https://4kreative.co/",
+          "name":"4Kreative | Digital Media Marketing Agency ,Web Developement, Design, SEO & Eccomerce in USA &amp; Stoughton &amp; Clearwater",
+          "description": "I build bespoke websites to help my clients push their businesses further online.",
+          "publisher": "Taras Kurilo, Ivan Perun",
+          "potentialAction": {
+              "@type": "SearchAction",
+              "target": "http://4kreative.co/search?&q={query}",
+              "query-input": "required name=query"
+          }
+      }
+  </script>
+  <!-- Google Structured Data Logo Schema -->
+  <script type="application/ld+json">
+      {
+          "@context": "http://schema.org",
+          "@type": "Organization",
+          "url": "https://www.4kreative.co",
+          "logo": "https://4kreative.co/img/logo.png"
+      }
+  </script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127294874-2"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
