--- a/work.html
+++ b/work.html
@@ -103,14 +103,16 @@
           "logo": "https://4kreative.co/img/logo.png"
       }
   </script>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127294874-2"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-134678695-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag('config', 'UA-127294874-2');
-  </script>
+  gtag('config', 'UA-134678695-1');
+</script>
+
 </head>
 
 <body>
