--- a/services.html
+++ b/services.html
@@ -7,13 +7,14 @@
   <title>4Kreative</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/styles.css">
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127294874-2"></script>
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134678695-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'UA-127294874-2');
+    gtag('config', 'UA-134678695-1');
   </script>
 </head>
 
